first draft of cp-auto-scale is functioning

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-auto-scale": "^1.0.4",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-resize-to-aspect-ratio": "^1.0.7",
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
