--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.1",
     "react-auto-scale": "^1.0.4",
     "react-dom": "^16.4.1",
+    "react-resize-observer": "^1.0.3",
     "react-resize-to-aspect-ratio": "^1.0.7",
     "react-scripts": "1.1.4",
     "styled-components": "^3.3.3"
